argocd-manifest-files/argocd-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app
  namespace: my-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: springboot-app
  template:
    metadata:
      labels:
        app: springboot-app
    spec:
      containers:
      - name: springboot-app
        image: shantanu1990/springboot-demo:10
        ports:
        - containerPort: 8080
