argocd-manifest-files/argocd-service.yml
apiVersion: v1
kind: Service
metadata:
  name: springboot-app-service
  namespace: my-app
spec:
  selector:
    app: springboot-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
