argocd-manifest-files/ingress-nginx-controller.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-basic
  annotations:
    # Tells Azure to find the IP inside your infrastructure resource group
    service.beta.kubernetes.io/azure-load-balancer-resource-group: MC_raks_raks_northeurope
spec:
  type: LoadBalancer
  loadBalancerIP: 135.236.233.58
